styles.css
@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Pacifico&display=swap");

:root {
  --main-bg-color: #f1f1f1;
  --alt-bg-color: #fff;
  --main-color: #ff4f4f;
  --main-hover-color: #51ad2a;
}

/* General Styles */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  width: 100vw;
  height: 100vh;
  font-family: "Montserrat", sans-serif;
  font-size: 14px;
  color: var(--main-color);
  background-color: var(--main-bg-color);
}

a,
a:visited {
  color: var(--main-color);
  text-decoration: none;
  font-weight: 700;
  cursor: pointer;
  height: 100%;
}

a:hover {
  color: var(--main-hover-color);
}

button {
  background-color: var(--main-hover-color);
  color: var(--alt-bg-color);
  border: none;
  padding: 0.5em;
  font-family: inherit;
  font-weight: 700;
  border-radius: 3px;
  cursor: pointer;
}

button:focus {
  outline: none;
}

button:hover {
  filter: brightness(110%);
}

p {
  margin: 1rem 0;
  font-weight: 700;
}

.container {
  padding: 1em;
}

/* content container */
#content {
  display: flex;
  flex-direction: column;
  height: 100%;
}

/* Navigation */

nav {
  flex: 0 1 auto;
  background-color: var(--alt-bg-color);
  box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.1);
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 1;
}

nav img {
  height: 30px;
}

nav img:hover {
  filter: brightness(120%);
}

nav ul {
  display: flex;
  list-style-type: none;
  align-items: center;
}

nav li {
  font-size: 0.8rem;
  padding: 0.5em 0.3em;
  cursor: pointer;
}

nav li:last-child {
  margin-right: 0;
}

.active {
  /* background-color: rgba(0, 0, 0, 0.1); */
  border-bottom: 2px solid var(--main-hover-color);
}

/* Main content section */
.brand {
  font-family: "Pacifico", "Montserrat", sans-serif;
  letter-spacing: 0.2rem;
}

main {
  flex: 1 1 auto;
  height: 100%;
  background-image: url(../images/background.jpg);
  background-size: auto;
  background-repeat: no-repeat;
  display: flex;
  align-items: center;
  justify-content: center;
}

.copy {
  opacity: 0;
  animation: fadeIn 0.3s ease-in forwards;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.general-content .copy {
  background-color: rgba(0, 0, 0, 0.65);
  text-align: center;
}

.copy {
  color: white;
  width: 100%;
  max-width: 600px;
}

/* Menu items */
.meal-container {
  border-top: 1px solid white;
  padding-top: 0.5em;
  margin: 0.5em 0;
}

.meal-header {
  display: flex;
  justify-content: space-between;
}

.meal-desc {
  font-weight: normal;
}

@media (min-width: 600px) {
  .copy {
    width: auto;
    margin: 0 auto;
    border-radius: 10px;
  }

  nav li {
    margin-right: 2rem;
    font-size: 1rem;
  }

  nav img {
    height: 40px;
  }
}

@media (min-width: 1000px) {
  body {
    font-size: 1.2rem;
  }

  button {
    font-size: inherit;
  }

  nav img {
    height: 50px;
  }
}

@media (min-width: 1440px) {
  main {
    background-size: 100%;
  }
}

